--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "express": "^4.10.4",
     "gulp": "^3.8.10",
     "gulp-concat": "^2.4.2",
     "gulp-inject": "^1.0.2",
@@ -11,10 +12,11 @@
     "gulp-livereload": "^2.1.1",
     "gulp-minify-css": "^0.3.11",
     "gulp-plumber": "^0.6.6",
+    "gulp-uglify": "^1.0.2",
     "gulp-watch": "^3.0.0",
     "mongoose": "^3.8.20",
-    "socket.io": "^1.2.1",
-    "gulp-uglify": "^1.0.2"
+    "path": "^0.4.9",
+    "socket.io": "^1.2.1"
   },
   "devDependencies": {},
   "scripts": {
